# anthym

./: .gitignore  LICENSE  README.md  TODO.md  test.lang
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: ast.rs  builtins.c  builtins.rs  env.rs  error.rs  expects.rs  fmt.rs  function.rs  grammar.pest  ice.rs  jit.rs  lex.rs  lib.rs  ops.rs  parse.rs  run.rs  rustic_std.rs  stdlib.rs  token.rs  unescape.rs  value.rs
lib/src/deprecated/: env.rs  function.rs  run_deprecated.rs  value.rs
lib/src/stdlib/: mod.rs  prelude.c
output/: test
output/artifacts/: builtins.c
