[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2"
logos = "0.12.1"
textwrap = "0.16.0"
paste = "1.0.11"
cranelift = "0.93.1"
cranelift-module = "0.93.1"
cranelift-jit = "0.93.1"
cranelift-native = "0.93.1"
target-lexicon = "0.12.6"
lazy_static = "1.4.0"
cranelift-object = "0.93.1"
